@@ -1,3 +1,6 @@
+- urpmi
+  o diskspace issues are now a fatal error (need perl-URPM 3.20)
+    (no use going on with the other transactions)
 - gurpmi
   o add support for --clean
 - urpmi.update, urpmi.addmedia, urpmi.removemedia:
